CC summary stats

--- a/project.yaml
+++ b/project.yaml
@@ -2181,3 +2181,11 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/CC_delta_summary_stats.csv
+
+  
+  complete_delta_change_summary_stats:
+    run: r:latest analysis/ethnicity_check/CC/CC_delta_change_summary_stats.R --output-dir=output/data 
+    needs: [complete_case_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_change_summary_stats.csv
