stratified analysis data

--- a/project.yaml
+++ b/project.yaml
@@ -2166,6 +2166,13 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_deltachange_quantiles.csv
 
+  complete_case_stratified_data:
+    run: r:latest analysis/ethnicity_check/CC/CC_stratified_analysis_data.R --output-dir=output/data 
+    needs: [complete_case_data]
+    outputs:
+      highly_sensitive:
+        table1: output/data/CC_stratified_analysis_data.csv
+
 
   complete_case_study_pop:
     run: r:latest analysis/ethnicity_check/CC/CC_studypop_charac.R --output-dir=output/data 
