--- a/project.yaml
+++ b/project.yaml
@@ -2224,6 +2224,16 @@ actions:
         table1: output/data/CC_delta_change_models_1_black.csv
         table2: output/data/CC_delta_change_models_1_south_asian.csv
 
+  complete_delta_change_models1_age_stratified:
+    run: r:latest analysis/ethnicity_check/CC/delta_change/stratified/CC_delta_change_models_1_age_stratified.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_change_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_change_models_1_18_39.csv
+        table2: output/data/CC_delta_change_models_1_40_59.csv
+        table3: output/data/CC_delta_change_models_1_60_79.csv
+
+
   ## delta models: pandemic
   complete_delta_pandemic_models1:
     run: r:latest analysis/ethnicity_check/CC/delta/CC_delta_pandemic_models_1.R --output-dir=output/data 
