--- a/project.yaml
+++ b/project.yaml
@@ -2234,6 +2234,15 @@ actions:
         table3: output/data/CC_delta_change_models_1_60_79.csv
 
 
+  complete_delta_change_models1_sex_stratified:
+    run: r:latest analysis/ethnicity_check/CC/delta_change/stratified/CC_delta_change_models_1_sex_stratified.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_change_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_change_models_1_Female.csv
+        table2: output/data/CC_delta_change_models_1_Male.csv
+      
+
   ## delta models: pandemic
   complete_delta_pandemic_models1:
     run: r:latest analysis/ethnicity_check/CC/delta/CC_delta_pandemic_models_1.R --output-dir=output/data 
