IMD stratified delta change

--- a/project.yaml
+++ b/project.yaml
@@ -2241,7 +2241,15 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_delta_change_models_1_Female.csv
         table2: output/data/CC_delta_change_models_1_Male.csv
-      
+
+  complete_delta_change_models1_IMD_stratified:
+    run: r:latest analysis/ethnicity_check/CC/delta_change/stratified/CC_delta_change_models_1_IMD_stratified.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_change_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_change_models_1_IMD1.csv
+        table2: output/data/CC_delta_change_models_1_IMD5.csv
+
 
   ## delta models: pandemic
   complete_delta_pandemic_models1:
