--- a/project.yaml
+++ b/project.yaml
@@ -2310,6 +2310,17 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_delta_pandemic_models_2.csv
 
+
+  complete_delta_pandemic_models1_age:
+    run: r:latest analysis/ethnicity_check/CC/delta/stratified/pandemic/CC_delta_pandemic_models_1_age.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_1_18_39.csv
+        table2: output/data/CC_delta_pandemic_models_1_40_59.csv
+        table3: output/data/CC_delta_pandemic_models_1_60_79.csv
+
+
   
   ## delta models: precovid
   complete_delta_precovid_models1:
