delta summary stats age stratifed

--- a/project.yaml
+++ b/project.yaml
@@ -2311,6 +2311,17 @@ actions:
         table1: output/data/CC_delta_pandemic_models_2.csv
 
 
+################# STRATIFIED DELTA
+
+  complete_delta_summary_stats_pandemic_stratified_age:
+    run: r:latest analysis/ethnicity_check/CC/delta/stratified/pandemic/CC_delta_summary_stats_pandemic_age.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_summary_stats_18_39.csv
+        table2: output/data/CC_delta_summary_stats_40_59.csv
+        table3: output/data/CC_delta_summary_stats_60_79.csv
+
   complete_delta_pandemic_models1_age:
     run: r:latest analysis/ethnicity_check/CC/delta/stratified/pandemic/CC_delta_pandemic_models_1_age.R --output-dir=output/data 
     needs: [complete_case_stratified_delta_data]
