--- a/project.yaml
+++ b/project.yaml
@@ -1,7 +1,7 @@
 version: '3.0'
 
 expectations:
-  population_size: 500000
+  population_size: 50000
 
 actions:
 
@@ -2448,6 +2448,16 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_delta_pandemic_models_2_IMD1.csv
         table2: output/data/CC_delta_pandemic_models_2_IMD5.csv
+
+  complete_delta_pandemic_models2_weight:
+    run: r:latest analysis/ethnicity_check/CC/delta/stratified/pandemic/CC_delta_pandemic_models_2_weight.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_2_healthy.csv
+        table2: output/data/CC_delta_pandemic_models_2_overweight.csv
+        table3: output/data/CC_delta_pandemic_models_2_obese.csv
+
 
 
   ## delta models: precovid
