--- a/project.yaml
+++ b/project.yaml
@@ -2291,6 +2291,15 @@ actions:
         table2: output/data/CC_delta_change_models_2_40_59.csv
         table3: output/data/CC_delta_change_models_2_60_79.csv
 
+  complete_delta_change_models1_weight_stratified:
+    run: r:latest analysis/ethnicity_check/CC/delta_change/stratified/CC_delta_change_models_1_weight_stratified.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_change_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_change_models_1_healthy.csv
+        table2: output/data/CC_delta_change_models_1_overweight.csv
+        table3: output/data/CC_delta_change_models_1_obese.csv
+
 
   complete_delta_change_models1_sex_stratified:
     run: r:latest analysis/ethnicity_check/CC/delta_change/stratified/CC_delta_change_models_1_sex_stratified.R --output-dir=output/data 
