--- a/project.yaml
+++ b/project.yaml
@@ -2604,4 +2604,9 @@ actions:
         table1: output/data/CC_delta_pandemic_models_1_t2d.csv
 
 
-     
+  complete_delta_models_2_t2d:
+    run: r:latest analysis/ethnicity_check/DWMP/CC_eth_corrected_delta_pandemic_models_2_t2dm.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_2_t2d.csv   
