--- a/project.yaml
+++ b/project.yaml
@@ -2610,3 +2610,11 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/CC_delta_pandemic_models_2_t2d.csv   
+
+
+  complete_delta_summary_stats_pandemic_hypertension:
+    run: r:latest analysis/ethnicity_check/DWMP/CC_eth_corrected_delta_summary_stats_hypertension.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_summary_stats_hypertension.csv
