--- a/project.yaml
+++ b/project.yaml
@@ -2211,6 +2211,14 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_delta_weight_summary_stats_round.csv
 
+
+  complete_delta_time_summary_stats:
+    run: r:latest analysis/ethnicity_check/CC/CC_delta_time_summary_stats.R --output-dir=output/data 
+    needs: [complete_case_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_time_summary_stats.csv
+
   
   complete_delta_change_summary_stats:
     run: r:latest analysis/ethnicity_check/CC/CC_delta_change_summary_stats.R --output-dir=output/data 
