age stratified t2dm

--- a/project.yaml
+++ b/project.yaml
@@ -2671,3 +2671,14 @@ actions:
     outputs:
       moderately_sensitive:
         table1: output/data/CC_delta_prepandemic_models_2_hypertension.csv   
+
+## Stratified T2DM delta_pandemic
+
+  t2dm_stratified_delta_pandemic_age:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_t2dm_age_strat.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_1_t2d_18_39.csv
+        table2: output/data/CC_delta_pandemic_models_1_t2d_40_59.csv
+        table3: output/data/CC_delta_pandemic_models_1_t2d_60_79.csv
