--- a/project.yaml
+++ b/project.yaml
@@ -2693,6 +2693,22 @@ actions:
         table3: output/data/CC_delta_pandemic_models_2_t2d_60_79.csv
 
 
+  t2dm_stratified_delta_pandemic_models_1_sex:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_t2dm_sex_strat.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_1_t2d_male.csv
+        table2: output/data/CC_delta_pandemic_models_1_t2d_female.csv
+
+  t2dm_stratified_delta_pandemic_models_2_sex:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_2_t2dm_sex_strat.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_2_t2d_male.csv
+        table2: output/data/CC_delta_pandemic_models_2_t2d_female.csv
+
 
   hypertension_stratified_delta_pandemic_models_1_age:
     run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_hypertension_age_strat.R --output-dir=output/data 
@@ -2712,3 +2728,20 @@ actions:
         table1: output/data/CC_delta_pandemic_models_2_hypertension_18_39.csv
         table2: output/data/CC_delta_pandemic_models_2_hypertension_40_59.csv
         table3: output/data/CC_delta_pandemic_models_2_hypertension_60_79.csv
+
+  hypertension_stratified_delta_pandemic_models_1_sex:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_hypertension_sex_strat.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_1_hypertension_male.csv
+        table2: output/data/CC_delta_pandemic_models_1_hypertension_female.csv
+
+
+  hypertension_stratified_delta_pandemic_models_2_sex:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_2_hypertension_sex_strat.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_models_2_hypertension_male.csv
+        table2: output/data/CC_delta_pandemic_models_2_hypertension_female.csv
