--- a/project.yaml
+++ b/project.yaml
@@ -2674,6 +2674,18 @@ actions:
 
 ## Stratified T2DM delta_pandemic
 
+  t2dm_stratified_delta_pandemic_counts_age:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_counts_t2d_age.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_counts_t2d_18_39.csv
+        table2: output/data/CC_delta_pandemic_counts_t2d_40_59.csv
+        table3: output/data/CC_delta_pandemic_counts_t2d_60_79.csv
+
+
+
+
   t2dm_stratified_delta_pandemic_models_1_age:
     run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_t2dm_age_strat.R --output-dir=output/data 
     needs: [complete_case_stratified_delta_data]
@@ -2692,6 +2704,14 @@ actions:
         table2: output/data/CC_delta_pandemic_models_2_t2d_40_59.csv
         table3: output/data/CC_delta_pandemic_models_2_t2d_60_79.csv
 
+  t2dm_stratified_delta_pandemic_counts_sex:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_counts_t2d_sex.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_counts_t2d_female.csv
+        table2: output/data/CC_delta_pandemic_counts_t2d_male.csv
+
 
   t2dm_stratified_delta_pandemic_models_1_sex:
     run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_t2dm_sex_strat.R --output-dir=output/data 
@@ -2708,6 +2728,16 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_delta_pandemic_models_2_t2d_male.csv
         table2: output/data/CC_delta_pandemic_models_2_t2d_female.csv
+
+
+  t2dm_stratified_delta_pandemic_counts_eth:
+    run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_counts_t2d_eth.R --output-dir=output/data 
+    needs: [complete_case_stratified_delta_data]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_delta_pandemic_counts_t2d_black.csv
+        table2: output/data/CC_delta_pandemic_counts_t2d_south_asian.csv
+
 
   t2dm_stratified_delta_pandemic_models_1_eth:
     run: r:latest analysis/ethnicity_check/DWMP/DWMP_stratified/CC_eth_corrected_delta_pandemic_models_1_t2dm_eth_strat.R --output-dir=output/data 
