CC_MICE_multivariate

--- a/project.yaml
+++ b/project.yaml
@@ -2882,3 +2882,12 @@ actions:
         table1: output/data/CC_imputation_sample_univariate.csv
         table2: output/data/CC_imputation_univariate.csv
         table3: output/data/CC_imputation_sample_pop_demographic_round.csv
+
+
+  CC_MICE_3:
+    run: r:latest analysis/ethnicity_check/MICE/eth_corrected_MICE_multivariate.R --output-dir=output/data 
+    needs: [CC_MICE_1]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_imputation_sample_multivariate.csv
+        table2: output/data/CC_imputation_multivariate.csv
