--- a/project.yaml
+++ b/project.yaml
@@ -2891,3 +2891,11 @@ actions:
       moderately_sensitive:
         table1: output/data/CC_imputation_sample_multivariate.csv
         table2: output/data/CC_imputation_multivariate.csv
+
+  CC_MICE_4:
+    run: r:latest analysis/ethnicity_check/MICE/eh_corrected_MICE_multivarita_eth.R --output-dir=output/data 
+    needs: [CC_MICE_1]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/CC_imputation_sample_multivariate_ethorder.csv
+        table2: output/data/CC_imputation_multivariate_ethorder.csv
